# Near-ft-Staking-Contract

./: README.md
child-contract/: Cargo.toml  README.md
child-contract/src/: lib.rs  view.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.json
master-contract/: Cargo.toml  README.md
master-contract/src/: lib.rs
