[package]
name = "master-contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.6.0"
near-contract-standards = "5.6.0"
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.7", features = ["unit-testing"] }
near-workspaces = "0.17.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
borsh = "1.5.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
